# third_party_flutter

./: BUILD.gn  NOTICE  OAT.xml  README.OpenSource  README.md  README_zh.md  bundle.json  flutter_ace_config.gni  flutter_config.gni  flutter_engine.gni  make_skia_include_dir.py  platform_task_runner_adapter.cc
engine/flutter/: BUILD.gn  README.OpenSource
engine/flutter/ci/licenses_golden/: licenses_flutter
engine/flutter/common/: BUILD.gn  settings.cc  settings.h
engine/flutter/flow/: BUILD.gn  paint_utils.cc  skia_gpu_object.cc  skia_gpu_object.h
engine/flutter/flow/layers/: clip_rrect_layer.cc  clip_rrect_layer.h  container_layer.cc  container_layer.h  filter_layer.cc  filter_layer.h  hole_layer.cc  hole_layer.h  layer.h  mask_layer.cc  mask_layer.h  opacity_layer.cc  picture_layer.cc  texture_layer.cc  texture_layer.h  transform_layer.cc  transform_layer.h
engine/flutter/flow/ohos_layers/: BUILD.gn  backdrop_filter_layer.cpp  backdrop_filter_layer.h  clip_path_layer.cpp  clip_path_layer.h  clip_rect_layer.cpp  clip_rect_layer.h  clip_rrect_layer.cpp  clip_rrect_layer.h  color_filter_layer.h  container_layer.cpp  container_layer.h  filter_layer.cpp  filter_layer.h  layer.h  layer_tree.cpp  layer_tree.h  layer_tree_builder.cpp  layer_tree_builder.h  mask_layer.cpp  mask_layer.h  opacity_layer.cpp  opacity_layer.h  paint_context.h  picture_layer.cpp  picture_layer.h  shader_mask_layer.cpp  shader_mask_layer.h  texture_layer.cpp  texture_layer.h  texture_register.cpp  texture_register.h  transform_layer.cpp  transform_layer.h
engine/flutter/fml/: BUILD.gn  build_config.h  logging.cc  message_loop_impl.cc  message_loop_task_queues.cc  message_loop_task_queues.h  task_runner.cc  task_runner.h  thread.cc  trace_event.cc  trace_event.h
engine/flutter/fml/time/: time_point.cc
engine/flutter/frontend_server/: BUILD.gn
engine/flutter/lib/io/: dart_io.cc
engine/flutter/lib/snapshot/: BUILD.gn
engine/flutter/lib/ui/: BUILD.gn  dart_runtime_hooks.cc  dart_runtime_hooks.h  dart_ui.cc  dart_wrapper.h  ui_dart_state.cc  ui_dart_state.h
engine/flutter/runtime/: BUILD.gn  ace_runtime_controller.cc  dart_isolate.cc  dart_isolate.h  dart_isolate_unittests.cc  dart_service_isolate.cc  dart_vm.cc  runtime_controller.cc  runtime_controller.h  runtime_delegate.h  service_protocol.cc  window_manager.cc  window_manager.h
engine/flutter/shell/common/: BUILD.gn  ace_display_manager_jni.cc  ace_display_manager_jni.h  ace_engine.cc  ace_platform_view.cc  ace_run_configuration.cc  ace_shell.cc  animator.cc  engine.cc  engine.h  platform_view.h  rasterizer.cc  run_configuration.h  shell.cc  shell.h  shell_io_manager.cc  skia_event_tracer_impl.cc  switches.cc  vsync_creator.h  vsync_waiter.cc  vsync_waiter_fallback.cc
engine/flutter/sky/: BUILD.gn
engine/flutter/testing/: BUILD.gn  testing.gni
engine/flutter/vulkan/: BUILD.gn  vulkan_application.cc  vulkan_application.h  vulkan_backbuffer.cc  vulkan_backbuffer.h  vulkan_command_buffer.cc  vulkan_command_buffer.h  vulkan_debug_report.cc  vulkan_debug_report.h  vulkan_device.cc  vulkan_device.h  vulkan_handle.h  vulkan_hilog.h  vulkan_image.h  vulkan_interface.cc  vulkan_interface.h  vulkan_native_surface.h  vulkan_native_surface_android.h  vulkan_native_surface_ohos.cc  vulkan_native_surface_ohos.h  vulkan_proc_table.cc  vulkan_proc_table.h  vulkan_provider.cc  vulkan_provider.h  vulkan_surface.cc  vulkan_surface.h  vulkan_swapchain.cc  vulkan_swapchain.h  vulkan_utilities.h  vulkan_window.cc  vulkan_window.h
engine/flutter/web_sdk/: BUILD.gn
flutter/: .gitignore
flutter/examples/flutter_gallery/: BUILD.gn
glfw/: BUILD.gn
skia/: BUILD.gn  skia
skia/experimental/editor/: BUILD.gn
skia/gn/: BUILD.gn  bench.gni  core.gni  gm.gni  gpu.gni  samples.gni  sksl.gni  tests.gni  utils.gni
skia/gn/toolchain/: BUILD.gn
skia/include/core/: SkFontMgr.h  SkImage.h  SkImageInfo.h  SkMatrix.h  SkPath.h  SkPoint.h  SkPoint3.h  SkPreConfig.h  SkRRect.h  SkRect.h  SkRegion.h  SkTextBlob.h  SkVertices.h
skia/include/gpu/: GrConfig.h  GrContext.h  GrContextOptions.h  GrGpuResource.h
skia/include/private/: GrTypesPriv.h
skia/include/utils/: SkCamera.h
skia/modules/particles/: BUILD.gn
skia/modules/skottie/: BUILD.gn  skottie.gni
skia/modules/skparagraph/: BUILD.gn  skparagraph.gni
skia/modules/skshaper/: BUILD.gn
skia/src/core/: SkATrace.cpp  SkBigPicture.cpp  SkCpu.cpp  SkDrawShadowInfo.h  SkMask.cpp  SkMatrix.cpp  SkOpts.cpp  SkPath.cpp  SkRRect.cpp  SkRect.cpp  SkRegion.cpp  SkTextBlob.cpp  SkTraceEventCommon.h
skia/src/gpu/: GrContext.cpp  GrDataUtils.cpp  GrDrawOpAtlas.cpp  GrDrawOpAtlas.h  GrGpu.cpp  GrGpu.h  GrGpuResource.cpp  GrLegacyDirectContext.cpp  GrProxyProvider.cpp  GrProxyProvider.h  GrRenderTargetContext.cpp  GrRenderTargetOpList.cpp  GrResourceCache.cpp  GrResourceCache.h  GrSoftwarePathRenderer.cpp  GrSurfaceProxy.cpp  GrSurfaceProxy.h
skia/src/image/: SkImage_Lazy.cpp
skia/src/ports/: SkDebug_ohos.cpp  SkFontHost_mac.cpp  SkFontMgr_android_factory.cpp  SkFontMgr_config_parser.cpp  SkFontMgr_config_parser.h  SkFontMgr_custom_directory_factory.cpp  SkFontMgr_ohos.cpp  SkFontMgr_ohos.h  SkFontMgr_preview.cpp  SkFontMgr_preview.h  SkFontMgr_win_factory.cpp
skia/src/utils/: SkCamera.cpp
skia/src/xml/: CssStyleParser.cpp  CssStyleParser.h  SkDOM.cpp  SkDOM.h
txt/src/minikin/: FontCollection.cpp  FontCollection.h  FontFamily.cpp  FontFamily.h  Hyphenator.cpp  LineBreaker.cpp  LineBreaker.h
txt/src/skia/: paragraph_builder_skia.cc  paragraph_skia.cc  paragraph_skia.h
txt/src/txt/: drawing.h  font_collection.cc  font_collection.h  font_skia.cc  font_skia.h  paint_record.cc  paint_record.h  paragraph.h  paragraph_builder.h  paragraph_builder_txt.cc  paragraph_builder_txt.h  paragraph_style.h  paragraph_txt.cc  paragraph_txt.h  platform.cc  platform.h  platform_linux.cc  platform_mac.mm  platform_ohos.cc  run_metrics.h  text_shadow.cc  text_shadow.h  text_style.cc  text_style.h  typeface_font_asset_provider.cc  typeface_font_asset_provider.h
txt/src/utils/: WindowsUtils.h
(+178 files in other folders)
