# Copyright (c) 2021 Huawei Device Co., Ltd.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/flutter/flutter_ace_config.gni")

flutter_external_icu_include_dirs = [
  "//third_party/icu/icu4c/source/common",
  "//third_party/icu/icu4c/source/i18n",
  "//third_party/icu/icu4c/source/ohos",
  "//third_party/icu/icu4c/source",
]

flutter_internal_icu_include_dirs = [
  "$flutter_root/skia/third_party/externals/icu/source/common",
  "$flutter_root/skia/third_party/externals/icu/source/i18n",
  "$flutter_root/skia/third_party/externals/icu/source",
  "$flutter_root/skia/third_party/icu",
]

ace_external_libharfbuzz_config_include_dirs = [
  "$flutter_root/skia/third_party/harfbuzz",
  "$flutter_root/skia/third_party/externals/harfbuzz/src",
  "$flutter_root/skia/third_party/icu",

  "//third_party/icu/icu4c/source/common",
  "//third_party/icu/icu4c/source/i18n",
]
ace_internal_libharfbuzz_config_include_dirs = [
  "$flutter_root/skia/third_party/harfbuzz",
  "$flutter_root/skia/third_party/externals/harfbuzz/src",
  "$flutter_root/skia/third_party/icu",

  "$flutter_root/skia/third_party/externals/icu/source/common",
  "$flutter_root/skia/third_party/externals/icu/source/i18n",
]

ace_libsfntly_config_ohos_include_dirs = [
  "$flutter_root/skia/third_party/externals/sfntly/cpp/src",
  "$flutter_root/skia/third_party/icu",

  "//third_party/icu/icu4c/source/common",
  "//third_party/icu/icu4c/source/i18n",
]

ace_libsfntly_config_preview_include_dirs = [
  "$flutter_root/skia/third_party/externals/sfntly/cpp/src",
  "$flutter_root/skia/third_party/icu",

  "$flutter_root/skia/third_party/externals/icu/source/common",
  "$flutter_root/skia/third_party/externals/icu/source/i18n",
]

ace_pdf_config_ohos_include_dirs = [
  "$flutter_root/skia",
  "$flutter_root/skia/third_party/externals/sfntly/cpp/src",
  "$flutter_root/skia/third_party/icu",

  "//third_party/icu/icu4c/source/common",
  "//third_party/icu/icu4c/source/i18n",
]

ace_pdf_config_preview_include_dirs = [
  "$flutter_root/skia",
  "$flutter_root/skia/third_party/externals/sfntly/cpp/src",
  "$flutter_root/skia/third_party/icu",

  "$flutter_root/skia/third_party/externals/icu/source/common",
  "$flutter_root/skia/third_party/externals/icu/source/i18n",
]
