# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//third_party/flutter/flutter_ace_config.gni")

flutter_external_icu_include_dirs = [
  "//third_party/icu/icu4c/source/common",
  "//third_party/icu/icu4c/source/i18n",
  "//third_party/icu/icu4c/source/ohos",
  "//third_party/icu/icu4c/source",
]

flutter_internal_icu_include_dirs = [
  "$flutter_root/skia/third_party/externals/icu/source/common",
  "$flutter_root/skia/third_party/externals/icu/source/i18n",
  "$flutter_root/skia/third_party/externals/icu/source",
  "$flutter_root/skia/third_party/icu",
]

ace_external_libharfbuzz_config_include_dirs = [
  "$flutter_root/skia/third_party/harfbuzz",
  "$flutter_root/skia/third_party/externals/harfbuzz/src",
  "$flutter_root/skia/third_party/icu",

  "//third_party/icu/icu4c/source/common",
  "//third_party/icu/icu4c/source/i18n",
]
ace_internal_libharfbuzz_config_include_dirs = [
  "$flutter_root/skia/third_party/harfbuzz",
  "$flutter_root/skia/third_party/externals/harfbuzz/src",
  "$flutter_root/skia/third_party/icu",

  "$flutter_root/skia/third_party/externals/icu/source/common",
  "$flutter_root/skia/third_party/externals/icu/source/i18n",
]

ace_libsfntly_config_ohos_include_dirs = [
  "$flutter_root/skia/third_party/externals/sfntly/cpp/src",
  "$flutter_root/skia/third_party/icu",

  "//third_party/icu/icu4c/source/common",
  "//third_party/icu/icu4c/source/i18n",
]

ace_libsfntly_config_preview_include_dirs = [
  "$flutter_root/skia/third_party/externals/sfntly/cpp/src",
  "$flutter_root/skia/third_party/icu",

  "$flutter_root/skia/third_party/externals/icu/source/common",
  "$flutter_root/skia/third_party/externals/icu/source/i18n",
]

ace_pdf_config_ohos_include_dirs = [
  "$flutter_root/skia",
  "$flutter_root/skia/third_party/externals/sfntly/cpp/src",
  "$flutter_root/skia/third_party/icu",

  "//third_party/icu/icu4c/source/common",
  "//third_party/icu/icu4c/source/i18n",
]

ace_pdf_config_preview_include_dirs = [
  "$flutter_root/skia",
  "$flutter_root/skia/third_party/externals/sfntly/cpp/src",
  "$flutter_root/skia/third_party/icu",

  "$flutter_root/skia/third_party/externals/icu/source/common",
  "$flutter_root/skia/third_party/externals/icu/source/i18n",
]
